Fri Dec 30 22:54:21 EET 2005  Pekka Riikonen <priikone@silcnet.org>

	* New SILC PKCS API enabling support for other public keys
	  and certificates, lib/silccrypt/silcpkcs.[ch], silcpk.[ch].

	* Separated SILC Public Key Payload routines from the PKCS API
	  to lib/silccore/silcpubkey.[ch].

Wed Dec 28 13:55:22 EET 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added SILC Key Repository library, lib/silcskr.

	* Added SILC Server library, lib/silcserver.

Mon Dec 19 18:04:24 EET 2005  Pekka Riikonen <priikone@silcnet.org>

	* MIME objects in attributes now use SilcMime.  Affected files
	  are lib/silccore/silcattrs.[ch].

Sat Dec 17 20:13:31 EET 2005  Pekka Riikonen <priikone@silcnet.org>

	* Synchronize semaphore posting for real threads in FSM.
	  Affected files are lib/silcutil/silcfsm.c, silcfsm_i.h.

Mon Nov 28 17:06:54 EET 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_file_set_nonblock.  Affected file is
	  lib/silcutil/silcfileutil.h.

	* Added silc_fd_stream_file to lib/silcutil/silcfdstream.[ch].

Sat Nov 26 16:13:40 EET 2005  Pekka Riikonen <priikone@silcnet.org>

	* FSM based implementation of SILC SKE.  Simpler interface also.
	  Affected files are in lib/silcske/.

	* Added SilcBool type.  Affected file lib/silcutil/silctypes.h.

Sat Nov 19 17:34:51 EET 2005  Pekka Riikonen <priikone@silcnet.org>

        * Added SilcMime API to lib/silcutil/silcmime.[ch].  The old
          silc_mime_parse is available but deprecated.

        * Check that packet is valid when processing key exchange,
          authentication and rekey protocols.  Fixes a crashbug.
          Affected files are apps/silcd/protocol.c and
          lib/silcclient/protocol.c.

        * Added SILC_HASH_MAXLEN to lib/silccrypt/silchash.h, and changed
          all hash buffers to use that instead of fixed values.

Wed Nov 16 15:47:12 EET 2005  Pekka Riikonen <priikone@silcnet.org>

        * Added SHA-256 to crypto library.  The SHA-256 takes now